deployment/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websites-ingress-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: dashboard.csgames.org
    http:
      paths:
      - path: /
        backend:
          serviceName: csgames-dashboard-prod-backend
          servicePort: 4200
  - host: api.csgames.org
    http:
      paths:
      - path: /
        backend:
          serviceName: csgames-gateway-prod-backend
          servicePort: 8000
